# RGB-rs

./: Cargo.toml  README.md  devicelist.toml
src/: main.rs  parse.rs
src/controller/: GigabyteRGBFusion2.rs  mod.rs
src/interface/: mod.rs  usb.rs
