[package]
name = "RGB-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.17" , features = ["env", "unicode", "derive"] }
libloading = "0.8.5"
rusb = "0.9.4"
serde = { version = "1.0.210", features = ["derive", "serde_derive"] }
toml = "0.8.19"
windows = { version = "0.58.0", features = ["Devices_I2c", ] }
